# strukturen

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
.ebextensions/: 00-os-packages.config  01-additional-packages.config  02-nginx-config.config  03-container-commands.config
.github/workflows/: codeql-analysis.yml  deploy.yml  django.yml  type_annotations.yml
claims/: admin.py  apps.py  forms.py  models.py  permissions.py  schema.py  services.py  tests.py
claims/migrations/: 0001_initial.py  0002_auto_20211203_1338.py  0003_auto_20211203_2007.py  0004_auto_20211203_2032.py  0005_alter_valueclaim_value.py  0006_alter_claimtype_value_schema.py  0007_auto_20211204_1230.py  0008_claimtype_code_name.py  0009_claimtype_value_template.py
oauth/: admin.py  apps.py  forms.py  models.py  oauth_backend.py  schema.py  services.py  signals.py  urls.py  views.py
oauth/migrations/: 0001_initial.py  0002_auto_20210206_1222.py  0003_auto_20211208_1559.py  0004_alter_userprofile_profile_picture.py
organisation/: admin.py  apps.py  documents.py  forms.py  models.py  permissions.py  schema.py  services.py
organisation/migrations/: 0001_initial.py  0002_alter_organisationentity_parent.py  0003_organisationentity_short_name.py  (+6 more)
orgcharts/: admin.py  apps.py  forms.py  models.py  permissions.py  schema.py  services.py  signals.py
person/: admin.py  apps.py  forms.py  models.py  permissions.py  schema.py  services.py
settings/: admin.py  apps.py  asgi.py  base.py  default_groups.py  schema.py  search.py  settings.py  urls.py  views.py  wsgi.py
(+30 files in other folders)
