[tool.poetry]
name = "strukturen"
version = "0.1.0"
description = ""
authors = ["Lilith Wittmann"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.13"
django-reversion = "^4.0.1"
django-polymorphic = "^3.1.0"
django-admin-json-editor = "^0.2.3"
graphene-django = "^2.15.0"
django-filter = "^21.1"
serious-django-services = "^0.5"
serious-django-permissions = "^0.17"
serious-django-graphene = "^0.5.1"
django-graphene-permissions = "^0.0.4"
jsonschema = "^4.2.1"
django-oauth-toolkit = "^1.5.0"
django-rest-framework-social-oauth2 = "^1.1.0"
django-oauth-toolkit-jwt = {git = "https://github.com/LilithWittmann/django-oauth-toolkit-jwt/"}
Pillow = "^9.0.0"
django-cors-headers = "^3.10.0"
django-crispy-forms = "^1.13.0"
graphene-file-upload = "^1.3.0"
boto3 = "^1.20.24"
psycopg2 = "^2.9.2"
django-storages = "^1.12.3"
sentry-sdk = "^1.5.1"
django-secrets-manager = "^0.1.13"
django-allow-cidr = "^0.3.1"
social-auth-app-django = "^5.0.0"
django-opensearch-dsl = "^0.2.0"


[tool.poetry.dev-dependencies]
black = "^21.12b0"
coverage = "^6.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
